--- a/1-tworzenie-obiektu/index.html
+++ b/1-tworzenie-obiektu/index.html
@@ -43,7 +43,10 @@ function getXMLHttpRequest()
 
 var r;
 
-r = getXMLHttpRequest();    
+r = getXMLHttpRequest();
+
+var autor = 'Wojda135NCI';
+alert('Autorem jest: ' + autor);    
       
 </script>
     
