--- a/1-tworzenie-obiektu/index.html
+++ b/1-tworzenie-obiektu/index.html
@@ -45,7 +45,7 @@ var r;
 
 r = getXMLHttpRequest();
 
-var autor = 'Wojda135NCI';
+var autor = 'WojdaL135NCI';
 alert('Autorem jest: ' + autor);    
       
 </script>
