Zmiana nazwy pliku

--- a/2-1-lorem-ipsum-tekst/index.html
+++ b/2-1-lorem-ipsum-tekst/index.html
@@ -48,7 +48,7 @@ function processResponse()
     };
 }
 
-r.open('GET', 'dane.txt', true);
+r.open('GET', 'wojda.txt', true);
 r.onreadystatechange = processResponse;
 r.send(null);
         
