--- a/2-1-lorem-ipsum-tekst/index.html
+++ b/2-1-lorem-ipsum-tekst/index.html
@@ -51,6 +51,7 @@ function processResponse()
 		
 		lista wszystkich kodów błedów znajduję się pod adresem https://www.w3.org/Protocols/rfc2616/rfc2616-sec10.html
 		
+		Nas interesuje tylko kod 200 czyli ok, reszta nie obsłuzy zapytania
 		*/
 		alert('Problem z zapytaniem, kod bledu: ' +r.status);
 		}
