Zmiana nazwy plików

--- a/2-2-lorem-ipsum-xml/index.html
+++ b/2-2-lorem-ipsum-xml/index.html
@@ -61,7 +61,7 @@ function processResponse()
     };
 }
 
-r.open('GET', 'tekst.xml', true);
+r.open('GET', 'wojda.xml', true);
 r.onreadystatechange = processResponse;
 r.send(null);
         
