--- a/2-2-lorem-ipsum-xml/index.html
+++ b/2-2-lorem-ipsum-xml/index.html
@@ -55,7 +55,7 @@ function processResponse()
             
             alert(
 	        'XML z serwera: ' + 
-		r.responseXML.getElementsByTagName('tekst')[0].childNodes[0].nodeValue
+		r.responseXML.getElementsByTagName('autor')[0].childNodes[0].nodeValue
             );
         };
     };
