Zmiana nazwy pliku i dodanie właściwości ccs

--- a/3-1-getelementbyid/wojda135nci.html
+++ b/3-1-getelementbyid/wojda135nci.html
@@ -14,9 +14,11 @@
 var el;
 
 el = document.getElementById('tresc');
-el.innerHTML = '<strong>Lorem</strong> ipsum...';
+el.innerHTML = '<strong>Auterem zmian jest </strong> Łukasz';
 el.style.border = '2px solid red';
 el.style.background = '#fef4e0';
+el.style.opacity ='0.5';
+el.style.padding = '20px 50px';
 
 </script>    
 
