Komenatrz do ccs

--- a/3-1-getelementbyid/wojda135nci.html
+++ b/3-1-getelementbyid/wojda135nci.html
@@ -17,8 +17,8 @@ el = document.getElementById('tresc');
 el.innerHTML = '<strong>Auterem zmian jest </strong> Łukasz';
 el.style.border = '2px solid red';
 el.style.background = '#fef4e0';
-el.style.opacity ='0.5';
-el.style.padding = '20px 50px';
+el.style.opacity ='0.5'; // przezroczystość elementu na poziemie 50% ;skala od 0-1 ->(100%)
+el.style.padding = '20px 50px'; // dodanie dopełnienia elementu (20px -> góra dół, 50px -> bo bokach), możemy również podać jako ( top, right, bottom, left) lub (wszystkie_równe)
 
 </script>    
 
