--- a/3-2-zdarzenia/wojda135nci.html
+++ b/3-2-zdarzenia/wojda135nci.html
@@ -19,8 +19,8 @@ function onclickHandler()
 {
     var el;
     el = document.getElementById('tresc');
-    el.innerHTML = 'click click click...';
-    el.style.border = '2px solid red';
+    el.innerHTML = 'Klikniecie w element, by Łukasz';
+    el.style.border = '4px solid red';
     el.style.background = '#fef4e0';
 }    
 
@@ -28,7 +28,7 @@ function onmouseoverHandler()
 {
     var el;
     el = document.getElementById('tresc');
-    el.innerHTML = 'over over over...';
+    el.innerHTML = 'Wskaźni myszy nad elementem ;) by Łukasz';
     el.style.border = '2px solid green';
     el.style.background = '#d8fee6';
 }    
@@ -37,7 +37,7 @@ function onmouseoutHandler()
 {
     var el;
     el = document.getElementById('tresc');
-    el.innerHTML = 'out out out...';
+    el.innerHTML = 'Wskaźnik myszy poza elementem ;( by Łukasz';
     el.style.border = '2px solid blue';
     el.style.background = '#d6edfe';
 }    
