--- a/3-2-zdarzenia/wojda135nci.html
+++ b/3-2-zdarzenia/wojda135nci.html
@@ -36,7 +36,7 @@ function onclickHandler()
 {
     var el;
     el = document.getElementById('lista_zdarzen');
-    el.innerHTML = el.innerHTML + '<li class="red">Klikniecie w element, by Łukasz</li>'+el.innerHTML;
+    el.innerHTML =  '<li class="red">Klikniecie w element, by Łukasz</li>'+el.innerHTML;
 
 }    
 
