Dodanie class w liscie zdarzeń

--- a/3-2-zdarzenia/wojda135nci.html
+++ b/3-2-zdarzenia/wojda135nci.html
@@ -62,9 +62,9 @@ function onmouseoutHandler()
 <body>
 
 <ul class="zdarzenia">
-<li onclick="onclickHandler();">onclick</li>
-<li onmouseover="onmouseoverHandler();">onmouseover</li>
-<li onmouseout="onmouseoutHandler();">onmouseout</li>
+<li onclick="onclickHandler();" class="red">onclick</li>
+<li onmouseover="onmouseoverHandler();" class="green">onmouseover</li>
+<li onmouseout="onmouseoutHandler();"class="blue">onmouseout</li>
 </ul>
 Lista zdarzeń:
 <ul id="lista_zdarzen">
