Zmiana nazwy pliku

--- a/3-3-piosenki/wojda135nci.html
+++ b/3-3-piosenki/wojda135nci.html
@@ -92,7 +92,7 @@ function wyczyscDane()
 
 <div id="pojemnik">
     <ul id="menu">
-      <li><a href='#' onmouseover="getText('dane/lisek.xml');" onmouseout="wyczyscDane();">Chodzi lisek koło drogi</a></li>
+      <li><a href='#' onmouseover="getText('dane/my_name_is_lukas.xml');" onmouseout="wyczyscDane();">My name is Łukasz</a></li>
       <li><a href='#' onmouseover="getText('dane/misie.xml');" onmouseout="wyczyscDane();">Jadą, jadą misie</a></li>                  
       <li><a href='#' onmouseover="getText('dane/krasnoludki.xml');" onmouseout="wyczyscDane();">Krasnoludki</a></li>      
     </ul>
