--- a/3-3-piosenki/wojda135nci.html
+++ b/3-3-piosenki/wojda135nci.html
@@ -93,8 +93,8 @@ function wyczyscDane()
 <div id="pojemnik">
     <ul id="menu">
       <li><a href='#' onmouseover="getText('dane/my_name_is_lukas.xml');" onmouseout="wyczyscDane();">My name is Łukasz</a></li>
-      <li><a href='#' onmouseover="getText('dane/misie.xml');" onmouseout="wyczyscDane();">Jadą, jadą misie</a></li>                  
-      <li><a href='#' onmouseover="getText('dane/krasnoludki.xml');" onmouseout="wyczyscDane();">Krasnoludki</a></li>      
+      <li><a href='#' onmouseover="getText('dane/lukas.xml');" onmouseout="wyczyscDane();">Łukasz</a></li>                  
+      <li><a href='#' onmouseover="getText('dane/wrozbita.xml');" onmouseout="wyczyscDane();">Wróżbita Łukasz</a></li>      
     </ul>
 
     <p id="tresc">Witaj na stronie z piosenkami...</p>
