Margin brak średnika

--- a/4-1-rozwijanie-pojedyncze/wojda135nci.html
+++ b/4-1-rozwijanie-pojedyncze/wojda135nci.html
@@ -10,7 +10,7 @@
         border: 1px solid black;
         padding: 10px;
         background: #e8fff1;     
-		margin: 0 auto /* wypośrodkowanie pojemnika */
+		margin: 0 auto; /* wypośrodkowanie pojemnika */
 		color: white; /* zmiana koloru czcionki */
     }
     #minitresc {
