--- a/3.Ekstrakcja danych z sieci WWW/cena.html
+++ b/3.Ekstrakcja danych z sieci WWW/cena.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Ôªø<!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
@@ -103,11 +103,11 @@ $(document).ready(function() {
 <body>
 <div class="wrapper">
   <header>
-    JAVASCRIPT <span class="amp">i</span> jQUERY. NIEOFICJALNY&nbsp;PODR CZNIK
+    AJAX i PHP
   </header>
 	<div class="content">
 		<div class="main">
-			<h1>Cennik mieszkaÒ z DB</h1>
+			<h1>Cennik mieszka≈Ñ z DB</h1>
 			<div id="formwrapper">
 				<form method="get" action="cennik.php" id="cennik">
 					<p>
@@ -119,11 +119,11 @@ $(document).ready(function() {
 						<input type="text" name="cena" id="cena" disabled>
 					</p>
 					<p>
-						<label for="metraz">Metraø: </label>
+						<label for="metraz">Metra≈º </label>
 						<input type="text" name="metraz" id="metraz" disabled>
 					</p>
 					<p>
-						<input type="submit" name="button" id="button" value="Wyúlij" >
+						<input type="submit" name="button" id="button" value="Wy≈õlij" >
 					</p>
 				</form>
 			</div>
